# Data_management_system

./: .gitignore  CMakeLists.txt  README.md  lab1.docx  makefile
include/cli/: print_to_stream.h
include/common/: data_types.h
include/common/data_structures/: data_structures_operations_result.h  linked_list.h  node.h  tree.h
include/controller/queries/: queries.h
include/file/internals/blocks/: block.h  block_types.h  utils.h
include/file/internals/cells/: cell_types.h
include/storage/: storage_manager.h  storage_manager_pub.h  utils.h
include/storage/blocks/: block_common.h  block_manager.h  block_manager_pub.h  block_types_disk.h  block_types_mem.h  utils.h
include/storage/blocks/cells/: cell_types.h  utils.h
include/storage/blocks/disk_representation/: block_disk.h  block_types_disk.h
include/storage/blocks/disk_representation/cells/: cell_types.h  utils.h
include/storage/blocks/file_representation/: block_file.h  block_types_file.h
include/storage/blocks/memory_representation/: block_memory.h  block_types_mem.h
include/storage/blocks/memory_representation/cells/: cell_types.h
include/storage/cells/: cell_common.h  cell_types.h  utils.h
include/storage/cells/disk_representation/: cell_types.h
include/storage/cells/file_representation/: cell_types.h
include/storage/cells/memory_representation/: cell_types.h
include/storage/file/: file_interaction.h  file_statuses.h
include/storage/structure/document_tree/: document_tree.h
include/utils/: status_codes.h  storage_string_view.h  templates.h  types.h
src/: A.c
src/common/: data_types.c
src/common/data_structures/: linked_list.c
src/file/internals/blocks/: block.c
src/storage/: storage_manager.c
src/storage/blocks/: block.c  block_common.c  block_manager.c  utils.c
src/storage/blocks/disk_representation/: block_disk.c
src/storage/blocks/disk_representation/cells/: utils.c
src/storage/blocks/file_representation/: block_file.c
src/storage/blocks/memory_representation/: block_memory.c
src/storage/cells/: cell_common.c  cell_types.c  utils.c
src/storage/file/: file_interaction.c
src/storage/structure/document_tree/: document_tree.c
test/: CMakeLists.txt  a.jjj  test.h
test/src/common/data_structures_tests/: linked_list_test.c  tree_test.c
